welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Boolean
 required: Int
	if (nums(x)>=3) {
                 ^arrayFront9:5: error: type mismatch;
 found   : Unit
 required: Boolean
		for (x<-0 to 3) {
                      ^arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (nums(x)>=3) {
        ^